Bootstrap (mean, median) Mann–Whitney U test

--- a/bootstrap_groups.ipynb
+++ b/bootstrap_groups.ipynb
@@ -1,29 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "668cd4d3",
-   "metadata": {},
-   "source": [
-    "Описание эксперимента (hw_bootstrap.csv)\n",
-    "\n",
-    "Перед вами таблица, где числовая переменная – непрерывная. Задача – сравнить группы двумя способами: бутстрапом и u-тестом\n",
-    "Описание колонок\n",
-    "\n",
-    "    value – значения метрики\n",
-    "    experimentVariant – Вариант теста (Control – контроль, Treatment – тест)\n",
-    "\n",
-    "Задача\n",
-    "\n",
-    "    Сравните результат между тестом и контролем по двум кейсам:\n",
-    "        Примените бутстрап (с np.mean) и критерий mann-whitney, а потом сравните p-value\n",
-    "        Примените бутстрап (с np.median) и критерий mann-whitney, а потом сравните p-value\n",
-    "    Напишите выводы, которые можно сделать на основе анализа примененных критериев\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "797c3ebe",
    "metadata": {},
    "outputs": [],
@@ -33,13 +12,14 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import seaborn as sns\n",
-    "import scipy.stats as ss"
+    "import scipy.stats as ss\n",
+    "from tqdm.auto import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "6ab7ae22",
+   "execution_count": 2,
+   "id": "961e16f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "09dc1b08",
    "metadata": {},
    "outputs": [
@@ -141,7 +121,7 @@
        "4           5   9.789808           Control"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "79884fc5",
+   "execution_count": 4,
+   "id": "d30a05c3",
    "metadata": {},
    "outputs": [
     {
@@ -218,8 +198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "e805bbaa",
+   "execution_count": 5,
+   "id": "f16e0327",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +219,7 @@
        "Name: value, Length: 500, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,8 +231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "3df3b14d",
+   "execution_count": 6,
+   "id": "9092bffc",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +252,7 @@
        "Name: value, Length: 500, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,8 +264,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "6fb185ee",
+   "execution_count": 7,
+   "id": "f21ee92a",
    "metadata": {},
    "outputs": [
     {
@@ -304,8 +284,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "9bf8e622",
+   "execution_count": 8,
+   "id": "a0d738fb",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +294,7 @@
        "False"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,46 +306,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "d2f3919c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MannwhitneyuResult(statistic=124189.5, pvalue=0.8592148582485579)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result_mannwhitneyu = ss.mannwhitneyu(control_group, treatment_group, alternative='two-sided')\n",
-    "result_mannwhitneyu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64efb751",
+   "execution_count": 9,
+   "id": "75801734",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_bootstrap_results(column_1,\n",
     "                          column_2,\n",
-    "                          boot_interations,\n",
+    "                          boot_iterations,\n",
     "                          statistic,\n",
     "                          boot_conf_level\n",
     "                         ):\n",
     "    boot_len = max(len(column_1), len(column_2))\n",
     "    boot_data = []\n",
     "    for iteration in range(boot_iterations):\n",
-    "        sample_column_1 = column_1.sample(boot_len, replace=True).value\n",
-    "        sample_column_2 = column_2.samole(boot_len, replace=True).value\n",
-    "\n",
+    "        sample_column_1 = column_1.sample(boot_len, replace=True).values\n",
+    "        sample_column_2 = column_2.sample(boot_len, replace=True).values\n",
+    "        boot_data.append(statistic(sample_column_1 - sample_column_2))\n",
+    "        \n",
+    "    df_boot_data = pd.DataFrame(boot_data)\n",
+    "    \n",
+    "    p_value = min(sum(np.array(boot_data)<=0), \n",
+    "                  sum(np.array(boot_data)>=0)\n",
+    "                 ) * 2 / len(boot_data)\n",
+    "    return p_value\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a97e6d48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48647fc8aa6f4b4d9cb6f0e96b39b2e6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Boot Mean</th>\n",
+       "      <th>Boot Median</th>\n",
+       "      <th>P Mann-Whitneyu</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.942</td>\n",
+       "      <td>0.859215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.006</td>\n",
+       "      <td>0.882</td>\n",
+       "      <td>0.859215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.958</td>\n",
+       "      <td>0.859215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.006</td>\n",
+       "      <td>0.880</td>\n",
+       "      <td>0.859215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.900</td>\n",
+       "      <td>0.859215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.924</td>\n",
+       "      <td>0.859215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.834</td>\n",
+       "      <td>0.859215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.900</td>\n",
+       "      <td>0.859215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.006</td>\n",
+       "      <td>0.912</td>\n",
+       "      <td>0.859215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.916</td>\n",
+       "      <td>0.859215</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Boot Mean  Boot Median  P Mann-Whitneyu\n",
+       "0      0.000        0.942         0.859215\n",
+       "1      0.006        0.882         0.859215\n",
+       "2      0.002        0.958         0.859215\n",
+       "3      0.006        0.880         0.859215\n",
+       "4      0.004        0.900         0.859215\n",
+       "5      0.004        0.924         0.859215\n",
+       "6      0.008        0.834         0.859215\n",
+       "7      0.000        0.900         0.859215\n",
+       "8      0.006        0.912         0.859215\n",
+       "9      0.002        0.916         0.859215"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_results_bs_mw = pd.DataFrame(columns=['Boot Mean', 'Boot Median', 'P Mann-Whitneyu'])\n",
+    "\n",
+    "result_mannwhitneyu = ss.mannwhitneyu(control_group, treatment_group, alternative='two-sided')\n",
+    "\n",
+    "for iteration in tqdm(range(10)):\n",
+    "    result_bs_mean = get_bootstrap_results(column_1=control_group, \n",
+    "                                           column_2=treatment_group, \n",
+    "                                           boot_iterations=1000, \n",
+    "                                           statistic=np.mean, \n",
+    "                                           boot_conf_level=0.95\n",
+    "                                          )\n",
+    "    result_bs_median = get_bootstrap_results(column_1=control_group, \n",
+    "                                             column_2=treatment_group, \n",
+    "                                             boot_iterations=1000, \n",
+    "                                             statistic=np.median, \n",
+    "                                             boot_conf_level=0.95\n",
+    "                                            )\n",
+    "\n",
+    "    temp_data = {'Boot Mean': [result_bs_mean], 'Boot Median': [result_bs_median], 'P Mann-Whitneyu': [result_mannwhitneyu.pvalue]}\n",
+    "    df_results_bs_mw = pd.concat([df_results_bs_mw, pd.DataFrame(temp_data)], ignore_index=True)\n",
+    "    \n",
+    "#     print(f'Boot mean: {result_bs_mean};\\tBoot median: {result_bs_median};\\tMN: {result_mannwhitneyu.pvalue}')\n",
+    "\n",
+    "df_results_bs_mw"
    ]
   }
  ],
